<resources>
    <string name="app_name">Embryo Imaging</string>

    <array name="menuOptions">
        <item>Home</item>
        <item>Standalone device</item>
        <item>Smartphone device</item>
        <item>Open Camera</item>
        <item>Sample History</item>
        <item>Results</item>
        <item>About</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_reload">Please Reload !</string>

    <string name="camera_error">This device doesn\'t support Camera2 API.</string>


    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="title_activity_standalone">StandaloneActivity</string>
    <string name="title_activity_smartphone">SmartphoneActivity</string>
    <string name="title_activity_smartphone_kt">SmartphoneActivity_kt</string>
    <string name="patient_id">Patient ID:</string>
    <string name="shafiee_lab">(Shafiee Lab)</string>
    <string name="embryo_imaging_app">Embryo Imaging App</string>
    <string name="embryologist_login">Embryologist Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>


    <!--Gallery-->


    <!-- Error Dialog -->
    <string name="dialog_general_error_title">Oops, something went wrong…</string>
    <string name="dialog_general_error_message">Check your network connection and try again.</string>
    <string name="dialog_unauthorized_error_message">Server returned 401 (unauthorized). Double check your space ID and access token.</string>

    <!-- Menu -->
    <string name="action_about">About</string>

    <!-- About -->
    <string name="about_btn_faq">FAQ</string>
    <string name="about_btn_feedback">Send Feedback</string>
    <string name="about_btn_contact">Contact</string>
    <string name="about_btn_license">Licensing Information</string>

    <!-- Contentful URLs -->
    <string name="url_faq" formatted="false">https://contentful.com/faq/</string>
    <string name="url_feedback" formatted="false">https://github.com/contentful/gallery-app-android/issues/new</string>
    <string name="url_contact" formatted="false">https://www.contentful.com/contact/</string>
    <string name="url_licensing" formatted="false">http://www.apache.org/licenses/LICENSE-2.0</string>

    <!-- Heroes! -->
    <string name="gallery_photo_hero">gallery_photo_hero</string>

</resources>
